--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 header  {
 	width: 100%;
 	height: 10%;
-	background: url(images/header.png) no-repeat top;
+	background: url(images/header.png);
 }
 #logotype {
 	float: right;
